--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>My Project</h1>
+        <h1>My Project (Jason Kulak)</h1>
     </header>
     <main>
 
