player and question fields created

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 
 </head>
 <body>
-    <header>
-        <h1>My Project (Jason Kulak)</h1>
-    </header>
+    <div class="header">
+        <div class="good"> Rebels </div>
+        <div class="title"> STAR WARS TRIVIA </div>
+        <div class="evil"> Empire </div>
+    </div>
+    <div class="question">
+        <div class="answer-field"></div>
+        <div class="question-box"></div>
+        <div class="answer-box"></div>
+    </div>
+    
     <main>
 
     </main>
@@ -24,3 +32,12 @@
     </footer>
 </body>
 </html>
+
+
+<!-- <header>
+    <h1>STAR WARS TRIVIA</h1>
+</header>
+   <div class="answer">
+           <h3></h3>
+       <button>Use the Force</button>
+   </div> -->
