--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
         <div class="title"> STAR WARS TRIVIA </div>
         <div class="evil"> Empire </div>
     </div>
-    <div class="question">
+    <div class="text-middle">
         <div class="answer-field"></div>
+            <div class="answer"><input type="text" name="answer" placeholder="Place answer here"></div>
         <div class="question-box"></div>
+            <div class="question">Question:</div>
         <div class="answer-box"></div>
+            <div class="box"><input type="text" name="answer" placeholder="Place answer here"></div>
+    </div>
+    <div class="second-middle-field">
+        
     </div>
     
     <main>
@@ -34,10 +40,7 @@
 </html>
 
 
-<!-- <header>
-    <h1>STAR WARS TRIVIA</h1>
-</header>
-   <div class="answer">
-           <h3></h3>
+
+   <!-- <div class="button">
        <button>Use the Force</button>
    </div> -->
